force-app/main/default/objects/Client_custom_field_mapping__mdt/Client_custom_field_mapping__mdt.object-meta.xml
<CustomObject>
    <description>Metadata that stores the custom fields that the client uses in addition to the standard fields</description>
    <label>Client custom field mapping</label>
    <pluralLabel>Client custom field mappings</pluralLabel>
</CustomObject>