force-app/main/default/objects/Client_custom_field_mapping__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Should the custom field replace the standard field or be in addition to the standard</description>
    <label>Action?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace</fullName>
                <default>true</default>
                <label>Replace</label>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>