force-app/main/default/objects/Client_custom_field_mapping__mdt/fields/Custom_field_name__c.field-meta.xml
<CustomField>
    <fullName>Custom_field_name__c</fullName>
    <description>Name of the custom field that should be used in code</description>
    <label>Custom field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>