force-app/main/default/objects/Client_custom_field_mapping__mdt/fields/Record_type_name__c.field-meta.xml
<CustomField>
    <fullName>Record_type_name__c</fullName>
    <description>Stores the name of the record type for which the custom field replaces the amount field</description>
    <label>Record type name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>