force-app/main/default/objects/Client_custom_field_mapping__mdt/fields/Standard_field_name__c.field-meta.xml
<CustomField>
    <fullName>Standard_field_name__c</fullName>
    <description>Name of the standard field in addition to which the custom fields should be used</description>
    <label>Standard field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>